--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>React Typescript Tailwind Boilerplate</title>
-		<link rel="shortcut icon" href="/vite.svg" type="image/x-icon" />
+		<title>Swish.ma</title>
+		<link rel="shortcut icon" href="/swish.svg" type="image/x-icon" />
 	</head>
 
 	<body>
